--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/sonusainju/node_project_restaurant#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.3",
     "path": "^0.12.7"
   }
 }
