--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
   },
   "homepage": "https://github.com/sonusainju/node_project_restaurant#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.0",
     "nodemon": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
